Added a tutorial for applying object triple mapping

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -2,6 +2,10 @@
 
 * link:getting_started/install/index.html[Install KOMMA using the update site]
 
+= Framework
+
+* link:framework/objectmapping/index.html[Applying object triple mapping]
+
 = Contributing
 
 * link:contributing/sources/index.html[Get the sources]
