Fixed: property name
Change-Id: I6d4f78733a4103a1711d8a72ae6a3b54413218d0

--- a/docs/framework/objectmapping/index.adoc
+++ b/docs/framework/objectmapping/index.adoc
@@ -100,7 +100,7 @@ import net.enilink.composition.annotations.Iri;
 @Iri(Library.URI_STRING + "Document")
 public interface Document {
 
-	@Iri(Library.URI_STRING + "dateOfBirth")
+	@Iri(Library.URI_STRING + "dateOfRelease")
 	XMLGregorianCalendar getDateOfRelease();
 
 	void setDateOfRelease(XMLGregorianCalendar dateOfRelease);
