--- a/docs/framework/objectmapping/index.adoc
+++ b/docs/framework/objectmapping/index.adoc
@@ -35,13 +35,13 @@ Let us now have a look at the java interfaces that we use to create our entities
 package net.enilink.komma.example.objectmapping.model;
 
 import net.enilink.komma.core.URI;
-import net.enilink.komma.core.URIImpl;
+import net.enilink.komma.core.URIs;
 
 public class Library {
 
 	public static final String URI_STRING = "http://enilink.net/examples/objectmapping#";
 
-	public static final URI URI = URIImpl.createURI(URI_STRING);
+	public static final URI URI = URIs.createURI(URI_STRING);
 
 }
 ----
