--- a/docs/framework/objectmapping/index.adoc
+++ b/docs/framework/objectmapping/index.adoc
@@ -39,9 +39,9 @@ import net.enilink.komma.core.URIs;
 
 public class Library {
 
-	public static final String URI_STRING = "http://enilink.net/examples/objectmapping#";
+	public static final String NS = "http://enilink.net/examples/objectmapping#";
 
-	public static final URI URI = URIs.createURI(URI_STRING);
+	public static final URI NS_URI = URIs.createURI(NS);
 
 }
 ----
@@ -62,20 +62,20 @@ import javax.xml.datatype.XMLGregorianCalendar;
 
 import net.enilink.composition.annotations.Iri;
 
-@Iri(Library.URI_STRING + "Person")
+@Iri(Library.NS + "Person")
 public interface Person {
 
-	@Iri(Library.URI_STRING + "name")
+	@Iri(Library.NS + "name")
 	String getName();
 
 	void setName(String name);
 
-	@Iri(Library.URI_STRING + "dateOfBirth")
+	@Iri(Library.NS + "dateOfBirth")
 	XMLGregorianCalendar getDateOfBirth();
 
 	void setDateOfBirth(XMLGregorianCalendar dateOfBirth);
 
-	@Iri(Library.URI_STRING + "placeOfBirth")
+	@Iri(Library.NS + "placeOfBirth")
 	String getPlaceOfBirth();
 
 	void setPlaceOfBirth(String placeOfBirth);
@@ -97,15 +97,15 @@ import javax.xml.datatype.XMLGregorianCalendar;
 
 import net.enilink.composition.annotations.Iri;
 
-@Iri(Library.URI_STRING + "Document")
+@Iri(Library.NS + "Document")
 public interface Document {
 
-	@Iri(Library.URI_STRING + "dateOfRelease")
+	@Iri(Library.NS + "dateOfRelease")
 	XMLGregorianCalendar getDateOfRelease();
 
 	void setDateOfRelease(XMLGregorianCalendar dateOfRelease);
 	
-	@Iri(Library.URI_STRING + "title")
+	@Iri(Library.NS + "title")
 	String getTitle();
 
 	void setTitle(String title);
@@ -125,10 +125,10 @@ import java.util.Set;
 
 import net.enilink.composition.annotations.Iri;
 
-@Iri(Library.URI_STRING + "Book")
+@Iri(Library.NS + "Book")
 public interface Book extends Document {
 
-	@Iri(Library.URI_STRING + "author")
+	@Iri(Library.NS + "author")
 	Set<Person> getAuthors();
 
 	void setAuthors(Set<Person> persons);
@@ -146,7 +146,7 @@ package net.enilink.komma.example.objectmapping.model;
 
 import net.enilink.composition.annotations.Iri;
 
-@Iri(Library.URI_STRING + "Magazine")
+@Iri(Library.NS + "Magazine")
 public interface Magazine extends Document {
 
 	/*
