Providing an installation guide for the Eclipse Marketplace
Change-Id: I495992498ef0bf16448fdf49eed833bcd1dfd4af

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,6 +1,7 @@
 = Getting Started
 
-* link:getting_started/install/index.html[Install KOMMA using the update site]
+* link:getting_started/install_marketplace/index.html[Install KOMMA from the Eclipse Marketplace]
+* link:getting_started/install/index.html[Install KOMMA from the update site]
 
 = Framework
 
