--- a/docs/getting_started/install/index.adoc
+++ b/docs/getting_started/install/index.adoc
@@ -1,17 +1,17 @@
 = Install KOMMA from the update site
 
-Installing KOMMA is from the update site is easy!
+Installing KOMMA from the update site is easy!
 
 At first you have to get a current version of 
 http://www.eclipse.org[Eclipse]. In this tutorial I am 
-using Eclipse Kepler Standard for Linux (64bit). 
+using Eclipse 4.4 Standard for Linux (64bit). 
 
 Afterwards you can install KOMMA by clicking on 
 __Help > Install New Software__. Use the following update site.
 
 [source,text]
 ----
-http://komma.sourceforge.net/updatesite/1.0.0/
+http://komma.enilink.net/updates/1.1.0/
 
 ----
 
@@ -19,15 +19,12 @@ Check all items within the category RDF as shown in the picture below.
 
 image::updatesite.png[The KOMMA update site]
 
-Afterwards you have to restart your Eclipse application. Eventually 
-you are able to use the KOMMA Editor. 
+After restarting your Eclipse application you should finally be  
+able to use the KOMMA Editor. 
 
 You can test your installation by switching to the OWL perspective. 
 Just click __Window > Open Perspective > Other__ 
 
 image::perspective.png[Choosing the OWL-Perspective]
 
-Now you can play around with the KOMMA Editor.
-
-
-
+Now you can start playing with the KOMMA Editor.
