Change section title.
Change-Id: I5b4008470584db6e8e3d9755273bcbb528c11757

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -10,7 +10,7 @@
 = Framework - Examples
 
 * link:framework/objectmapping/index.html[Basic object triple mapping]
-* link:framework/behaviour/index.html[Adding behaviour classes to implement application logic]
+* link:framework/behaviour/index.html[Implement application logic with behaviour classes]
 
 = Editors
 
