--- a/docs/contributing/sources/index.adoc
+++ b/docs/contributing/sources/index.adoc
@@ -1,31 +1,32 @@
 = Get the sources
 
-The KOMMA development is spread over many different git repositories, 
-each bundling certain functionality.  
+The source code of KOMMA is hosted on Github at https://github.com/komma/komma-rdf.
 
-An easy way to get all the required projects is to use http://code.google.com/p/git-repo/[repo]. 
-You may have a look at some http://source.android.com/source/using-repo.html[documentation] 
-of this tool.
-
-Using _repo_ different git repositories are managed by a configuration file. We provide this file in 
-an additional git repository. For initializing _repo_ just switch to a workspace folder and 
-apply the following command. 
+The easiest way to get the source code is:
 
 [source,text]
 ----
-repo init -u https://github.com/komma/komma-manifest-rcp.git
+git clone --recursive https://github.com/komma/komma-rdf
 ----
 
-Afterwards you can synchronize the repositories using
+NOTE: The `--recursive` option is required to fetch the git submodules that are contained within the KOMMA repository.
+
+= Use Maven to build KOMMA
+
+KOMMA can be build with Maven by leveraging https://eclipse.org/tycho/[Eclipse Tycho]. You can simply use `mvn package` to compile and package all modules or `mvn install` to install them within your local Maven repository.
+
+If you like to build an update site (or rather an Eclipse P2 repository) for KOMMA then use
 
 [source,text]
 ----
-repo sync 
+cd releng/komma-updatesite
+mvn package
 ----
 
-The synchronization works with the last committed configuration file. So if we add a 
-project there, you will get it the next time you run this command. 
+to create it. Afterwards an archive file with the contents can be found within the `target-maven` subdirectory.
+The uncompressed P2 repository can be found at `features/net.enilink.komma.updatesite/target-maven/repository`.
 
+= Use Eclipse to develop KOMMA
 For working with the sources we suggest you to download a clean installation of 
 Eclipse. Then import all repositories into your workspace by clicking 
 __File > Import > Existing Projects into Workspace__
@@ -35,8 +36,3 @@ image::import.png[Import]
 You are ready to go :)
 
 image::ide.png[Ready to go]
-
-
-
-
-
