--- a/docs/contributing/sources/index.adoc
+++ b/docs/contributing/sources/index.adoc
@@ -1,4 +1,6 @@
-= Get the sources
+= Contribute to the KOMMA project
+
+== Get the sources
 
 The source code of KOMMA is hosted on Github at https://github.com/komma/komma.
 
@@ -6,27 +8,14 @@ The easiest way to get the source code is:
 
 [source,text]
 ----
-git clone --recursive https://github.com/komma/komma
+git clone https://github.com/komma/komma
 ----
 
-NOTE: The `--recursive` option is required to fetch the git submodules that are contained within the KOMMA repository.
+== Use Maven to build KOMMA
 
-= Use Maven to build KOMMA
+KOMMA can be build with Maven. You can simply use `mvn package` to compile and package all modules or `mvn install` to install them within your local Maven repository.
 
-KOMMA can be build with Maven by leveraging https://eclipse.org/tycho/[Eclipse Tycho]. You can simply use `mvn package` to compile and package all modules or `mvn install` to install them within your local Maven repository.
-
-If you like to build an update site (or rather an Eclipse P2 repository) for KOMMA then use
-
-[source,text]
-----
-cd releng/komma-updatesite
-mvn package
-----
-
-to create it. Afterwards an archive file with the contents can be found within the `target-maven` subdirectory.
-The uncompressed P2 repository can be found at `features/net.enilink.komma.updatesite/target-maven/repository`.
-
-= Use Eclipse to develop KOMMA
+== Use Eclipse to develop KOMMA
 For working with the sources we suggest you to download a clean installation of 
 Eclipse. Then import all repositories into your workspace by clicking 
 __File > Import > Existing Projects into Workspace__
